// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar > should match snapshot with collapsed state 1`] = `
<DocumentFragment>
  <nav
    aria-label="Sidebar Navigation"
    class="mocked-styled-4 el-side-bar"
  >
    <ul
      class="mocked-styled-5 elside-bar-menu-list"
      data-is-expanded="false"
    >
      SideBar list content
    </ul>
    <div
      class="mocked-styled-0 el-side-bar-collapse-button-container"
      data-is-expanded="false"
    >
      <button
        aria-expanded="false"
        class="mocked-styled-1 el-side-bar-collapse-button"
      >
        <span
          data-testid="collapse-icon"
        />
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`SideBar > should match snapshot with expanded state 1`] = `
<DocumentFragment>
  <nav
    aria-label="Sidebar Navigation"
    class="mocked-styled-4 el-side-bar"
  >
    <ul
      class="mocked-styled-5 elside-bar-menu-list"
      data-is-expanded="true"
    >
      SideBar list content
    </ul>
    <div
      class="mocked-styled-0 el-side-bar-collapse-button-container"
      data-is-expanded="true"
    >
      <button
        aria-expanded="true"
        class="mocked-styled-1 el-side-bar-collapse-button"
      >
        <span
          data-testid="collapse-icon"
        />
        <span
          class="mocked-styled-3 el-side-bar-collapse-text"
        >
          Collapse
        </span>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;
